# clockwork

./: .clockworkignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  FINAL_INTEGRATION_REPORT.md  INTEGRATION_COMPLETION_SUMMARY.md  POTENTIAL_ROADMAP.md  README.md  ROADMAP.md  RUNNER_IMPLEMENTATION_REPORT.md  VALIDATOR_ENHANCEMENT_REPORT.md  clockwork_minimal_architecture_plan_v_0.md  daemon_implementation_report.md  example.cw  main.py  pyproject.toml  pytest.ini  run_tests.py  simple_test.py  test_basic.py  test_complex_validation.py  test_daemon.py  test_daemon_simple.py  test_integration.py  test_validator_enhancement.py  test_with_example.py
.claude/agents/: example-guardian.md  readme-accuracy-validator.md
.clockwork/: state.json  test_results.json
.clockwork/integration_test/: artifact_bundle.json
.clockwork/test_output/: artifact_bundle.json
.github/workflows/: test-examples.yml
aquila/: main.py
aquila/engines/: declaration.py  declare.py  state.py  station.py
clockwork/: __init__.py  __main__.py  artifact_generator.py  cli.py  connection_completer.py  core.py  errors.py  formatters.py  main.py  model_loader.py  models.py  parser.py  pulumi_compiler.py  pyinfra_compiler.py  resource_completer.py  sample.cw  settings.py  state_manager.py  tool_selector.py
clockwork/_legacy/: README.md
clockwork/assembly/: __init__.py  differ.py  planner.py
clockwork/assertions/: __init__.py  base.py  container.py  file.py  http.py  process.py  resource.py  utils.py
clockwork/connections/: __init__.py  base.py  database.py  dependency.py  file.py  network.py  service_mesh.py
clockwork/daemon/: __init__.py  cli.py  loop.py  patch_engine.py  rate_limiter.py  types.py
clockwork/forge/: __init__.py  agno_agent.py  compiler.py  executor.py  runner.py  state.py
clockwork/intake/: __init__.py  parser.py  resolver.py  simple_parser.py  validator.py
clockwork/manual/: deploy.py  inventory.py
clockwork/pulumi_providers/: __init__.py  apple_container.py  file.py  git_repo.py  template_file.py
clockwork/pyinfra_facts/: __init__.py  apple_containers.py
clockwork/pyinfra_operations/: __init__.py  apple_containers.py
clockwork/pyinfra_ops/: __init__.py  compose.py  health.py  kubernetes.py  terraform.py
clockwork/resources/: __init__.py  apple_container.py  base.py  blank.py  brew.py  directory.py  docker.py  file.py  git.py  template_file.py  user.py
clockwork/service/: __init__.py  (+7 more)
configs/: README.md  development.json  lm_studio_config.json  production.json
demo-output/: README.md  config.json
docs/: README.md  SECRET_DETECTION.md
examples/: README.md  file-connection-example.py  runner_examples.py  service-mesh-example.py  simple-syntax-demo.cw
output/: article.md
scripts/: check-secrets.sh
tests/: README.md  __init__.py  conftest.py  test_apple_container_resource.py  test_composite_integration.py  test_composite_resources.py  test_connection_types.py  test_connections.py  test_docker_resource.py  test_file_connection.py  test_integration.py  test_model_loader.py  test_models.py  test_pulumi_compiler.py  test_pyinfra_compiler.py  test_resolver.py  test_resources.py  test_service_mesh_connection.py  test_tool_selector.py  test_unit.py
(+73 files in other folders)
