[project]
name = "clockwork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.2",
    "pydantic>=2.11.9",
    "pyinfra>=3.5.1",
    "python-hcl2>=7.3.1",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
]
