[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clockwork"
version = "0.2.0"
description = "Factory for intelligent declarative infrastructure tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.16.0",
    "rich>=13.0.0",
    "pydantic-ai-slim[mcp,duckduckgo]>=0.0.49",
    "openai>=1.99.9",
    "pyinfra>=3.0",
    "mcp>=1.0.0",
]

[project.scripts]
clockwork = "clockwork.cli:app"

[tool.setuptools.packages.find]
include = ["clockwork*"]
exclude = ["configs*", "docs*", "tests*", "examples*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pytest>=8.4.1",
]
