[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clockwork"
version = "0.3.0"
description = "Intelligent Infrastructure Orchestration in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.16.0",
    "rich>=13.0.0",
    "pydantic-ai-slim[mcp,duckduckgo]>=0.0.49",
    "openai>=1.99.9",
    "pulumi>=3.0.0",
    "pulumi-docker>=4.0.0",
    "pulumi-command>=1.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.0.0",
]

[project.scripts]
clockwork = "clockwork.cli:app"

[tool.setuptools.packages.find]
include = ["clockwork*"]
exclude = ["configs*", "docs*", "tests*", "examples*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
# Google Python Style Guide recommends 80 characters
line-length = 80
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and more
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
# Google style: stdlib -> third-party -> first-party
known-first-party = ["clockwork"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pep8-naming]
# Allow lowercase acronyms in function names (common in Google style)
classmethod-decorators = ["classmethod"]

[tool.ruff.format]
# Use double quotes (Google style)
quote-style = "double"
# Indent with spaces (Google style)
indent-style = "space"
